# gha-conda-tox-tests

./: README.md  install_class_osx.sh  pyproject.toml  requirements.txt  setup.cfg  soliket-tests.yml  tox.ini
.github/workflows/: publish.yaml  test-conda.yaml  test.yaml
src/: mpl_example.py
