[project]
name = "itrh-gha-test"
version = "0.1.dev5"
authors = [
	{name = "Ian Harrison", email = "harrisoni@cardiff.ac.uk"}
]
description = "A package for testing and learning gha/tox/conda/setuptools"
readme = "README.md"
requires-python = ">=3.8, <3.12"
license = {text = "CC-BY"}
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    "pytest",
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
all = ["scipy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
