[metadata]
name = gha-test
author = Ian Harrison
author_email = harrisoni@cardiff.ac.uk
description = A package for testing gha/tox/conda
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/itrharrison/gha-conda-tox-tests/
edit_on_github = True

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    scipy
    pandas
    pyyaml
    py-bobyqa
    packaging
    tqdm
    portalocker
    dill
    fuzzywuzzy
    astropy
    camb
    cosmopower
    getdist
    cobaya
    pyccl
    sacc
    fgspectra @ git+https://github.com/simonsobs/fgspectra@act_sz_x_cib#egg=fgspectra
    mflike @ git+https://github.com/simonsobs/lat_mflike@master